--- a/is_production/production/report/production_report/production_report.html
+++ b/is_production/production/report/production_report/production_report.html
@@ -22,12 +22,12 @@
 
 <h2 class="text-center">{%= __(report.report_name) %}</h2>
 <h3 class="text-center">{%= filters.company %}</h3>
-{% if (filters.cost_center) { %}
-	<h3 class="text-center">{%= filters.cost_center %}</h3>
+{% if (filters.site) { %}
+	<h3 class="text-center">{%= filters.site %}</h3>
 {% } %}
 <h3 class="text-center">{%= filters.fiscal_year %}</h3>
 <h5 class="text-center">
-	{%= __("Currency") %} : {%= filters.presentation_currency || erpnext.get_currency(filters.company) %}
+	{%= __("Currency") %} : {%= filters.presentation_currency || erpnext.get_currency(filters.company) %} 
 </h5>
 {% if (filters.from_date) { %}
 	<h5 class="text-center">
@@ -36,7 +36,7 @@
 {% } %}
 <hr>
 
-<!-- Primary Table (Hourly Production Hierarchy) -->
+<!-- Primary Table (Production Hierarchy without Day grouping) -->
 <h4 class="text-center">Primary Production Data (Total BCMs Hierarchy)</h4>
 <table class="table table-bordered">
 	<thead>
@@ -72,7 +72,7 @@
 
 <!-- Primary Chart -->
 {% if (chart) { %}
-    <h4 class="text-center">Primary Chart (Hourly Production)</h4>
+    <h4 class="text-center">Primary Chart (Production Data)</h4>
     <div class="chart-area">
         {%= frappe.render_chart(chart) %}
     </div>
