new file:   is_production/production/dashboard_chart/diesel_usage/diesel_usage.json 	new file:   is_production/production/dashboard_chart_source/__init__.py 	new file:   is_production/production/dashboard_chart_source/production_and_diesel/__init__.py 	new file:   is_production/production/dashboard_chart_source/production_and_diesel/production_and_diesel.json 	new file:   is_production/production/number_card/period_diesel_usage/period_diesel_usage.json 	new file:   is_production/production/number_card/total_hards_bcms/total_hards_bcms.json 	new file:   is_production/production/production_dashboard/diesel/diesel.json 	modified:   is_production/production/report/production_report/production_report.html 	modified:   is_production/production/report/production_report/production_report.js 	modified:   is_production/production/report/production_report/production_report.json 	modified:   is_production/production/report/production_report/production_report.py Tweaks to Production Report

--- a/is_production/production/report/production_report/production_report.html
+++ b/is_production/production/report/production_report/production_report.html
@@ -71,10 +71,18 @@
 </table>
 
 <!-- Primary Chart -->
-{% if (chart) { %}
+{% if (chart && chart.primary) { %}
     <h4 class="text-center">Primary Chart (Production Data)</h4>
     <div class="chart-area">
-        {%= frappe.render_chart(chart) %}
+        {%= frappe.render_chart(chart.primary) %}
+    </div>
+{% } %}
+
+<!-- Secondary Chart (Fuel Cap) -->
+{% if (chart && chart.secondary) { %}
+    <h4 class="text-center">Secondary Chart (Fuel Cap)</h4>
+    <div class="chart-area">
+        {%= frappe.render_chart(chart.secondary) %}
     </div>
 {% } %}
 
